Fix SVG on IE11

--- a/techwish/css/styles.pcss
+++ b/techwish/css/styles.pcss
@@ -33,6 +33,7 @@
 		justify-content: center;
 		> img {
 			height: 110px;
+			width: 140px;
 		}
 	}
 	&-text {
@@ -65,6 +66,7 @@
 		justify-content: center;
 		> img {
 			height: 120px;
+			width: 85px;
 		}
 	}
 	&-close {
@@ -125,11 +127,13 @@
 		&-logo-wrapper {
 			> img {
 				height: 180px;
+				width: 230px;
 			}
 		}
 		&-image-wrapper {
 			> img {
 				height: 180px;
+				width: 130px;
 			}
 		}
 	}
